--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -68,7 +68,9 @@ We have just added custom data to our session token in the Clerk Dashboard and m
 
 Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware#usage) allows you to configure access to your routes with fine grained control. It also allows you to retrieve claims directly from the session and redirect your user accordingly.
 
-Add the code sample below to your `src/middleware.ts` file:
+The following example demonstrates how to use Clerk's `authMiddleware()` to redirect users based on their onboarding status. If the user is signed in and has not completed onboarding, they will be redirected to the onboarding page. If the user has completed onboarding, they will be redirected to the dashboard.
+
+Note that the following example protects all routes. This is so that any user visiting your application is forced to authenticate, and then forced to onboard. You can customize the `publicRoutes` array to include any routes that should be accessible to all users, even unauthenticated ones.
 
 ```tsx
 import { authMiddleware } from "@clerk/nextjs";
