--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -77,31 +77,30 @@ import { authMiddleware } from "@clerk/nextjs";
 import { redirectToSignIn } from "@clerk/nextjs/server";
 import { NextRequest, NextResponse } from "next/server";
 
-// This example protects all routes including api/trpc routes
-// Please edit this to allow other routes to be public as needed.
-// See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your Middleware
 export default authMiddleware({
-  publicRoutes: ["/"],
+  // Define which routes are public
+  publicRoutes: [],
+  
   afterAuth: async (auth, req: NextRequest) => {
     const { userId, sessionClaims } = auth;
 
-    // For user visiting /onboarding, don't try and redirect
+    // For users visiting /onboarding, don't try to redirect
     if (userId && req.nextUrl.pathname === "/onboarding") {
       return NextResponse.next();
     }
 
-    // User isn't signed in and the route is private -- redirect to sign-in
+    // If the user isn't signed in and the route is private, redirect to sign-in
     if (!userId && !auth.isPublicRoute)
       return redirectToSignIn({ returnBackUrl: req.url });
 
-    // Catch users who doesn't have `onboardingComplete: true` in PublicMetata
-    // Redirect them to the /onboading out to complete onboarding
+    // Catch users who do not have `onboardingComplete: true` in their publicMetadata
+    // Redirect them to the /onboading route to complete onboarding
     if (userId && !sessionClaims?.metadata?.onboardingComplete) {
       const onboardingUrl = new URL("/onboarding", req.url);
       return NextResponse.redirect(onboardingUrl);
     }
 
-    // User is logged in and the route is protected - let them view.
+    // If the user is logged in and the route is protected, let them view.
     if (userId && !auth.isPublicRoute) return NextResponse.next();
 
     // If the route is public, anyone can view it.
