--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -113,7 +113,10 @@ export const config = {
 };
 ```
 
-Next, create a `layout.tsx` file in `src/app/onboarding` and add the following code to the file. This logic could go in the Middleware, but by adding to the `layout.tsx` to the route the logic remains in one place. This file can also be expanded to handle multiple steps, if multiple steps are required for an onboarding flow.
+You will need a layout for the `/onboarding` route that will redirect users to the dashboard if they have already completed onboarding.
+
+1. In your `/app` directory, create an `/onboarding` folder.
+2.  In your `/onboarding` directory,  create a `layout.tsx` file and add the following code to the file. This file could also be expanded to handle multiple steps, if multiple steps are required for an onboarding flow.
 
 ```tsx
 import { auth } from "@clerk/nextjs/server";
