--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -118,7 +118,7 @@ You will need a layout for the `/onboarding` route that will redirect users to t
 1. In your `/app` directory, create an `/onboarding` folder.
 2.  In your `/onboarding` directory,  create a `layout.tsx` file and add the following code to the file. This file could also be expanded to handle multiple steps, if multiple steps are required for an onboarding flow.
 
-```tsx
+```tsx filename="src/app/onboarding/layout.tsx"
 import { auth } from "@clerk/nextjs/server";
 import { redirect } from "next/navigation";
 
