--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -137,14 +137,14 @@ export default function RootLayout({
 
 Now that we have the logic for where to direct the user, we’ll need a way to track their onboarding status and note it on their session, let’s dig into that now!
 
-## Update publicMetadata based on onboarding state
+## Use `publicMetadata` to track user onboarding state
 
-Updating a user's publicMetadata as they progress through the flow will allow us to recognize when they have successfully completed their onboarding and, per the logic above, are now able to access the application. [Learn More](https://clerk.com/docs/users/metadata)
+Each Clerk user has a `User` object that contains a `publicMetadata` property, which can be used to store custom data about the user. This information can be accessed on the client side and can be used to drive application state. [Learn more about public metadata.](/docs/users/metadata#public-metadata)
 
-To do this you need:
+You can use the user's `publicMetadata` to track the user's onboarding state. To do this, you will create:
 
-- A method in your backend to securely update the user publicMetadata
-- A process in your frontend with logic to collect and submit all the information for onboarding. In this guide you’ll use an example form.
+- A process in your frontend with logic to collect and submit all the information for onboarding. In this guide, you will create a simple form.
+- A method in your backend to securely update the user's `publicMetadata`
 
 ## Add userUpdate method to your backend
 
