remove links from headings

--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -13,7 +13,9 @@ All examples assume you have an instance of the `Clerk::SDK`:
 sdk = Clerk::SDK.new
 ```
 
-## [Allowlist identifiers](https://clerk.com/docs/reference/backend-api/tag/Allow-list-Block-list)
+## Allowlist identifiers
+
+The following methods are available for managing [allowlist identifiers](https://clerk.com/docs/reference/backend-api/tag/Allow-list-Block-list).
 
 Retrieve the list of allowlist identifiers.
 
@@ -41,7 +43,9 @@ Toggle allowlist-only sign-ups on/off.
 sdk.allowlist.update(restricted_to_allowlist: true)
 ```
 
-## [Clients](https://clerk.com/docs/reference/backend-api/tag/Clients)
+## Clients
+
+The following methods are available for the [`clients`](https://clerk.com/docs/reference/backend-api/tag/Clients) resource.
 
 Retrieve a single client by its ID, if the ID is valid. Throws an error otherwise.
 
@@ -61,20 +65,9 @@ Verify the JWT and return the client.
 sdk.clients.verify_token("jwt")
 ```
 
-## [Emails](https://clerk.com/docs/reference/backend-api/tag/Email-and-SMS-Templates)
+## Sessions
 
-Send an email message to an email address ID belonging to another user.
-
-```ruby
-sdk.emails.create(
-    email_address_id: "ema_xyz", 
-    from_email_name: "noreply", 
-    subject: "Welcome",
-    body: "<html>...</html>",
-)
-```
-
-## [Sessions](https://clerk.com/docs/reference/backend-api/tag/Sessions)
+The following methods are available for managing [sessions](https://clerk.com/docs/reference/backend-api/tag/Sessions).
 
 Retrieve a single session by its ID, if the ID is valid. Throws an error otherwise.
 
@@ -100,19 +93,9 @@ Verify whether a session with a given ID corresponds to the provided session tok
 sdk.sessions.verify_token("sess_xyz", "jwt")
 ```
 
-## SMS messages (deprecated)
+# Users
 
-<Callout type="danger">
-  This resource is deprecated. Clerk no longer supports sending SMS messages through Clerk's backend API.
-</Callout>
-
-Send an SMS message to a phone number ID belonging to another user.
-
-```ruby
-sdk.sms_messages.create(phone_number_id: "idn_xyz", message: "Welcome!")
-```
-
-## [Users](https://clerk.com/docs/reference/backend-api/tag/Users)
+The following methods are available for managing [users](https://clerk.com/docs/reference/backend-api/tag/Users).
 
 Retrieves a list of users.
 
