--- a/docs/organizations/metadata.mdx
+++ b/docs/organizations/metadata.mdx
@@ -5,7 +5,7 @@ description: Organization objects hold a set of metadata that can be used intern
 
 # Organization metadata
 
-Organization metadata allows you to store information about an organization that is not part of the standard fields. This can be useful for storing custom attributes that are specific to your application.
+Organization metadata allows you to store information about an organization that is not part of the standard fields, such as custom attributes that are specific to your application.
 
 There are two types of metadata: **public** and **private**.
 
