--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -17,19 +17,21 @@ sdk = Clerk::SDK.new
 
 The following methods are available for managing [allowlist identifiers](https://clerk.com/docs/reference/backend-api/tag/Allow-list-Block-list).
 
-Retrieve the list of allowlist identifiers.
+### Retrieve the list of allowlist identifiers
 
 ```ruby
 sdk.allowlist_identifiers.all
 ```
 
-Add a new identifier to the allowlist. If `notify` is true, an email will be sent to notify the owner of the identifier.
+### Add a new allowlist identifier
+
+If `notify` is true, an email will be sent to notify the owner of the identifier.
 
 ```ruby
 sdk.allowlist_identifiers.create(identifier: "john@example.com", notify: true)
 ```
 
-Delete an allowlist identifier, given a valid ID. Throws an error if the ID is invalid.
+### Delete an allowlist identifier
 
 ```ruby
 sdk.allowlist_identifiers.delete("alid_xyz")
@@ -37,7 +39,7 @@ sdk.allowlist_identifiers.delete("alid_xyz")
 
 ## Allowlist
 
-Toggle allowlist-only sign-ups on/off.
+### Toggle allowlist-only sign-ups on/off
 
 ```ruby
 sdk.allowlist.update(restricted_to_allowlist: true)
@@ -47,19 +49,19 @@ sdk.allowlist.update(restricted_to_allowlist: true)
 
 The following methods are available for the [`clients`](https://clerk.com/docs/reference/backend-api/tag/Clients) resource.
 
-Retrieve a single client by its ID, if the ID is valid. Throws an error otherwise.
+### Retrieve a single client
 
 ```ruby
 sdk.clients.find("client_xyz")
 ```
 
-Retrieve the list of clients.
+### Retrieve the list of clients
 
 ```ruby
 sdk.clients.all
 ```
 
-Verify the JWT and return the client.
+### Verify the JWT and return the client
 
 ```ruby
 sdk.clients.verify_token("jwt")
@@ -69,23 +71,25 @@ sdk.clients.verify_token("jwt")
 
 The following methods are available for managing [sessions](https://clerk.com/docs/reference/backend-api/tag/Sessions).
 
-Retrieve a single session by its ID, if the ID is valid. Throws an error otherwise.
+### Retrieve a single session
 
 ```ruby
 sdk.sessions.find("sess_xyz")
 ```
 
-Retrieve a list of sessions.
+### Retrieve a list of sessions
 
 ```ruby
 sdk.sessions.all
 ```
 
-Revokes a session given its ID, if the ID is valid. Throws an error otherwise.
+### Revoke a session
 
 ```ruby
 sdk.sessions.revoke("sess_xyz")
 ```
+
+### Verify a session to a token
 
 Verify whether a session with a given ID corresponds to the provided session token. Throws an error if the provided ID is invalid.
 
@@ -93,29 +97,29 @@ Verify whether a session with a given ID corresponds to the provided session tok
 sdk.sessions.verify_token("sess_xyz", "jwt")
 ```
 
-# Users
+## Users
 
 The following methods are available for managing [users](https://clerk.com/docs/reference/backend-api/tag/Users).
 
-Retrieves a list of users.
+### Retrieve a list of users
 
 ```ruby
 sdk.users.all
 ```
 
-Retrieves a list of users, with filters:
+You can also filter users by email address:
 
 ```ruby
 sdk.users.all(email_address: ["user1@example.com", "user2@example.com"])
 ```
 
-Updates a user with a given ID. The provided ID must be valid, otherwise an error will be thrown.
+### Update a user
 
 ```ruby
 sdk.users.update("user_xyz", {first_name: "John"})
 ```
 
-Deletes a user given a valid ID. Throws an error otherwise.
+### Delete a user
 
 ```ruby
 sdk.users.delete("user_xyz")
