--- a/docs/backend-requests/resources/session-tokens.mdx
+++ b/docs/backend-requests/resources/session-tokens.mdx
@@ -9,7 +9,7 @@ When a user is authenticated in your application, Clerk generates a short-lived 
 
 ## Default session claims
 
-In every generated token, there are certain claims that are automatically included and cannot be overridden by templates. Clerk calls these "default claims". Many of these are standard claims registered by IANA. For generic information about them, refer to [RFC 7519](https://datatracker.ietf.org/doc/html/rfc7519#section-4.1).
+Every generated token has default claims that cannot be overridden by templates. Clerk's default claims include:
 
 The default claims are:
 
