--- a/docs/backend-requests/resources/session-tokens.mdx
+++ b/docs/backend-requests/resources/session-tokens.mdx
@@ -23,7 +23,7 @@ Every generated token has default claims that cannot be overridden by templates.
 
 The following claims are only included if the user is part of an organization:
 
-- `org_id`: organization ID - the ID of the currently active organization that the user belongs to.
+- `org_id`: organization ID - the ID of the active organization that the user belongs to.
 - `org_permissions`: organization permissions - the permissions of the user in the currently active organization.
 - `org_slug`: organization slug - the slug of the currently active organization that the user belongs to.
 - `org_role`: organization role - the role of the user in the currently active organization.
