--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -62,7 +62,7 @@ function touch(): Promise<Session>;
 
 ### `getToken()`
 
-Retrieves the user's session token for the default clerk token or the given template.
+Retrieves the user's session token for the default Clerk token or the given template.
 
 This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
 
