--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -64,7 +64,7 @@ function touch(): Promise<Session>;
 
 Retrieves the user's session token for the default Clerk token or the given template.
 
-This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for clerk token is one minute.
+This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for a Clerk token is one minute.
 
 Tokens can only be generated if the current user is signed in.
 
