--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -66,7 +66,7 @@ Retrieves the user's session token for the default Clerk token or the given temp
 
 This method uses a cache so a network request will only be made if the token in memory has expired. The TTL for a Clerk token is one minute.
 
-Tokens can only be generated if the current user is signed in.
+Tokens can only be generated if the user is signed in.
 
 ```typescript
 function getToken(options?: GetTokenOptions): Promise<string | null>;
