--- a/docs/references/nextjs/auth-object.mdx
+++ b/docs/references/nextjs/auth-object.mdx
@@ -86,7 +86,7 @@ export default async function Page() {
 
 You can use `getToken()` on an `Auth` object to retrieve the user's session token. You can also use this method to retrieve a custom JWT template.
 
-Tokens can only be generated if the current user is signed in.
+Tokens can only be generated if the user is signed in.
 
 #### `ServerGetToken`
 
