--- a/docs/guides/onboarding-flow.mdx
+++ b/docs/guides/onboarding-flow.mdx
@@ -15,7 +15,7 @@ In this guide, you will learn how to:
 2. Configure your middleware to read session data
 3. Update with the user's onboarding state
 
-For the sake of this guide, examples are written for Next.js App Router, but can be used with Next.js Pager Router as well. The examples have been pared down to the bare minimum to enable you to easily customize them to your needs.
+For the sake of this guide, examples are written for Next.js App Router, but can be used with Next.js Pages Router as well. The examples have been pared down to the bare minimum to enable you to easily customize them to your needs.
 <Callout type="info">
   To see a working example of what a custom onboarding flow can look like, check out our sample demonstration app [here](https://sample-onboarding-app.clerkpreview.com/).
 </Callout>
