--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -46,7 +46,7 @@ To edit the session token:
 }
 ```
 
-<img />
+5. Select **Save**.
 
 If you haven’t already, we can make the public metadata type information accessible to our application by adding the following to src/types/globals.d.ts:
 
