--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -182,13 +182,12 @@ export const completeOnboarding = async (formData: FormData) => {
 
 Now that we have a method to securely update our user’s `publicMetadata` we can call this server action from a client side form.
 
-## Add a form to your frontend
+## Collect user onboarding information
 
-With the backend updateUser method in place, we’ll add a basic page that contains a form to complete the onboarding process.
+To collect the user's onboarding information, create a form that will be displayed on the `/onboarding` page. This form will collect the user's application name and application type. This is a very loose example — you can use this step to capture information from the user, sync user data to your database, have the user sign up to a course or subscription, or more.
 
-This example form that will capture an application name (applicationName) and application type of either B2C or B2B (applicationType). This is a very loose example — you can use this step to capture information from the user, sync user data to your database, have the user sign up to a course or subscription, or more.
-
-To implement this logic, insert the following into your `src/app/onboarding/page.tsx`:
+1. In your `/onboarding` directory, create a `page.tsx` file.
+2. Add the following code to the file. 
 
 ```tsx
 "use client";
