--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -147,11 +147,12 @@ You can use the user's `publicMetadata` to track the user's onboarding state. To
 - A process in your frontend with logic to collect and submit all the information for onboarding. In this guide, you will create a simple form.
 - A method in your backend to securely update the user's `publicMetadata`
 
-## Add userUpdate method to your backend
+### Update the user's `publicMetadata` in your backend
 
-First, add a method in your backend, that will be called on form submission and update the user’s `publicMetadata` accordingly. The example below uses the `clerkClient` wrapper to interact with the Backend API.
+Now that there is a form to collect the user's onboarding information, you need to create a method in your backend to update the user's `publicMetadata` with this information. This method will be called when the user submits the form.
 
-Under src/app/onboarding/\_actions.ts add the following code snippet:
+1. In your `/onboarding` directory, create an `_actions.ts` file.
+2. Add the following code to the file. This file includes a method that will be called on form submission and will update the user's `publicMetadata` accordingly. The following example uses the [`clerkClient`](/docs/references/backend/overview) wrapper to interact with the Backend API and update the user's `publicMetadata`.
 
 ```tsx
 "use server";
