--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -49,7 +49,14 @@ To edit the session token:
 
 5. Select **Save**.
 
-If you haven’t already, we can make the public metadata type information accessible to our application by adding the following to src/types/globals.d.ts:
+To get auto-complete and prevent TypeScript errors when working with custom session claims, you can define a global type.
+
+1. In your application's root folder, add a `types` directory.
+2. Inside of the `types` directory, add a `globals.d.ts` file.
+3. Create the `CustomJwtSessionClaims` interface and declare it globally.
+4. Add the custom claims to the `CustomJwtSessionClaims` interface.
+
+For this guide, your `globals.d.ts` file should look like this:
 
 ```ts filename="types/globals.d.ts"
 export {};
