add note about settings not applying to already existing orgs

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -44,11 +44,11 @@ You can also change this limit on a per-organization basis:
 1. Navigate to the [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=organizations).
 2. In the navigation sidebar, select **Organizations**.
 3. Select the organization you want to update.
-4. In the **Membership limit** section, update the membership limit.
+4. In the **Membership limit** section, update the membership limit. Note that this will not apply to organizations that already exist.
 
 ### Default ability to delete
 
-By default, organizations are deletable. Any member with the "Delete organization" permission can delete an organization. To prevent organizations from being deleted, you can disable the ability to delete organizations by scrolling to the **Default ability to delete** section and unchecking the option.
+By default, organizations are deletable. Any member with the "Delete organization" permission can delete an organization. To prevent organizations from being deleted, you can disable the ability to delete organizations by scrolling to the **Default ability to delete** section and unchecking the option. Note that this will not apply to organizations that already exist.
 
 ### Verified domains
 
