Add sign-up guide, tweak content elsewhere

--- a/docs/elements/guides/sign-in.mdx
+++ b/docs/elements/guides/sign-in.mdx
@@ -12,7 +12,7 @@ In this guide you'll learn how to build a complete sign-in flow using Clerk Elem
 
 ### Add a sign-in route
 
-Create a new route in your Next.js application. The route needs to be a catch-all route so the sign-in flow can handled nested paths. Add the following snippet to `/app/sign-in/[[...sign-in]]/page.tsx`:
+Create a new route in your Next.js application. The route needs to be an [optional catch-all route](https://nextjs.org/docs/pages/building-your-application/routing/dynamic-routes#optional-catch-all-segments) so the sign-in flow can handled nested paths. Add the following snippet to `/app/sign-in/[[...sign-in]]/page.tsx`:
 
 ```tsx filename="/app/sign-in/[[...sign-in]]/page.tsx"
 'use client'
@@ -32,7 +32,7 @@ We've also added two imports, which we'll use as we build out the rest of the fl
 
 ### Add the start step
 
-The Clerk authentication flows are made up of **steps**. Steps handle rendering the UI for each part of the flow. To allow users to create a sign-in attempt, the `start` step needs to be rendered. We'll use the `<SignIn.Step>` component to render this step:
+The Clerk authentication flows are made up of **steps**. Steps handle rendering the UI for each part of the flow. To allow users to create a sign-in attempt, the `start` step needs to be rendered. We'll use the `<SignIn.Step>` component to render this:
 
 ```tsx filename="/app/sign-in/[[...sign-in]]/page.tsx" {9-11}
 'use client'
@@ -82,7 +82,7 @@ export default function SignInPage() {
 }
 ```
 
-`<Clerk.Field>` takes care of wiring up the input with the label element, and `<Clerk.FieldError>` will render any field-specific errors that get returned from the Clerk API. We've also introduced the `<Clerk.Action>` component. This component provides common actions that are used throughout the flows. In this case, we're using the `submit` action to rendr a submit button for the start form.
+`<Clerk.Field>` takes care of wiring up the input with the label element, and `<Clerk.FieldError>` will render any field-specific errors that get returned from the Clerk API. We've also introduced the `<Clerk.Action>` component. This component provides common actions that are used throughout the flows. In this case, we're using the `submit` action to render a submit button for the start form.
 
 <Callout type="info">
 If your Clerk instance supports signing in with Google and doesn't require MFA, you should be able to complete a sign in with the components we've rendered so far!
@@ -142,8 +142,10 @@ Verification is the final step in the sign-in flow. When a user has verified all
 
 _TK_
 
-### Add styling
+### Customize and add styling
 
-With the exception of `<SignIn.Root>` and `<SignIn.Strategy>`, every component rendered so far can be styled. You can use the `className` prop to add custom classes to each component. Check out the [styling guide](/docs/elements/guides/styling) for a more in-depth guide on styling the Clerk Elements components.
+You might have noticed by now that none of components rendered so far come with their own styling. This is by design! With the exception of `<SignIn.Root>` and `<SignIn.Strategy>`, every component rendered so far can be styled. You can use the `className` prop to add custom classes to each component. Check out the [styling guide](/docs/elements/guides/styling) for a more in-depth guide on styling Clerk Elements components.
+
+If you're looking to customize the UI even further, check out additional Clerk Elements components like [`<Loading>`](/docs/elements/reference/common#loading) and [`<FieldState>`](/docs/elements/reference/common#fieldstate).
 
 </Steps>
