--- a/docs/elements/overview.mdx
+++ b/docs/elements/overview.mdx
@@ -9,7 +9,7 @@ description: Clerk Elements provides complete control over the look and feel of 
 <Callout type="info">
 **Heads up!** Clerk Elements is currently in beta. We don't recommend that you use it in production just yet, but we'd love for you to try it out.
 
-If you have any feedback, please reach out to elements-feedback@clerk.dev.
+We'd love to hear about your experience using Clerk Elements. If you have any feedback, please reach out to elements-feedback@clerk.dev.
 </Callout>
 
 Clerk Elements is a library of unstyled, composable components that can be used to build completely custom UIs on top of Clerk's APIs, without having to manage the underlying logic.
@@ -18,7 +18,7 @@ Clerk Elements is a library of unstyled, composable components that can be used 
 
 ## Getting started
 
-Today, Clerk Elements is available for use through Clerk's Next.js SDK. As it gets closer to a stable release, support for additional frameworks will be added. Follow the [getting started instructions](/docs/elements/getting-started) to start using Clerk Elements in your project.
+Today, Clerk Elements is available for use through Clerk's Next.js SDK. As it gets closer to a stable release, support for additional frameworks will be added. Elements is available in the latest version of `@clerk/nextjs`. If your Next.js application is already using Clerk, you're ready to start building with Clerk Elements. If you're starting from scratch, follow the [Next.js quickstart](/docs/quickstarts/nextjs) to get started.
 
 Once you've got your project set up, you can start building custom UIs with Clerk Elements. The following guides will show you how to build your own custom flows:
 * [Build a sign-up flow](/docs/elements/guides/sign-up)
