apply haris's code review suggestions

--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -52,7 +52,7 @@ By default, organizations are deletable. Any member with the "Delete organizatio
 
 ### Verified domains
 
-Verified domains can be used to streamline enrollment into an organization. For example, if the domain `@clerk.com` is verified, any user with an email address ending in `@clerk.com` can be automatically invited or be suggested to join an organization with that domain. This feature is useful for organizations that want to restrict membership to users with specific email domains. See the [Verified domains](/docs/organizations/verified-domains) documentation for more information.
+Verified domains can be used to streamline enrollment into an organization. For example, if the domain `@clerk.com` is added to an organization, any user with a `@clerk.com` email address can be automatically invited or be suggested to join this organization. This feature is useful for organizations that want to restrict membership to users with specific email domains. See the [verified domains](/docs/organizations/verified-domains) documentation for more information.
 
 #### Suggestions
 
