--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -27,11 +27,11 @@ You can enable the following enrollment modes to be available for your applicati
 - **Automatic invitation** - During sign-up, a user will receive an invitation for the organization if their email's domain matches the verified domain. The user will join the organization if they accept the automatic invitation.
 - **Automatic suggestion** - During sign-up, a user will receive a suggestion for the organization if their email's domain matches the verified domain. The user can request to join, and an administrator must accept this request before the user can join the organization.
 
-Once a domain is created and verified in your application, an administrator will have the option to enable whichever enrollment modes you made available.
+Once a domain is added and verified in your organization, the user will have the option to select an enrollment mode from those you made available.
 
 ### Default role
 
-Once verified domains are enabled, you are required to define which role will be assigned to the user that will receive the organization invitation or organization suggestions in order to join your organization.
+Once verified domains are enabled, you are required to define which role will be assigned to the user that will receive the organization invitation or organization suggestion in order to join your organization.
 
 By default, the options are "Member" and "Admin". However, you can also [create custom roles for your organization](/docs/organizations/create-roles-permissions).
 
@@ -41,9 +41,9 @@ By default, the options are "Member" and "Admin". However, you can also [create 
 
 ## Adding and verifying domains
 
-Domains can be added and verified under an organization by an organization administrator. The easiest way to do so is by using Clerk's [`<OrganizationSwitcher />`] component. In the **General** tab, there will be a **Verified domains** section where you can add and verify domains.
+Domains can be added and verified under an organization by any user with the `org:sys_domains:manage` permission. By default, admins have this permission. The easiest way to add and verify domains is by using Clerk's [`<OrganizationSwitcher />`] component. In the **General** tab, there will be a **Verified domains** section.
 
-Domains can be verified through an email verification code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
+Domains can be verified through an email verification code sent to an email that matches the domain. If the user adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
 
 An application instance may only have one verified domain of the same name, and an organization may only have one domain of the same name (verified or unverified).
 
