--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -14,16 +14,11 @@ In this guide, you will learn how to:
 2. Configure your Middleware to read session data
 3. Update the user’s onboarding state
 
-To see a working example, check out our sample demonstration app [here](https://sample-onboarding-app.clerkpreview.com/).
+For the sake of this guide, examples are written for Next.js App Router, but can be used with Next.js Pager Router as well. The examples have been pared down to the bare minimum to enable you to easily customize them to your needs. 
 
 <Callout type="info" emoji="💡">
-  The examples below have been pared down to the bare minimum to enable you to
-  easily customize them to your needs, you can build them with the [Clerk + Next
-  Quickstart](https://clerk.com/docs/quickstarts/nextjs) using @clerk/nextjs
-  4.29.5 and Next 14.0.4.
+  To see this guide in action, check out the [repository](https://github.com/clerk/clerk-nextjs-onboarding-sample-app/tree/main).
 </Callout>
-
-Let’s get started!
 
 ## Add custom claims to your session token
 
