--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -6,6 +6,7 @@ description: Leverage Clerk’s customizable session tokens, public metadata, an
 # Add custom onboarding to your authentication flow
 
 Onboarding is a crucial part of many authentication flows. Sometimes you need to make sure certain criteria is met and collected before allowing access to parts of your application. With Clerk, you can leverage customizable session tokens, public metadata, and Middleware to properly address these needs in your own app.
+
 This guide creates an example onboarding flow that requires users to complete a form before they can access the application. After a user authenticates using Clerk's [Account portal](/docs/account-portal/overview), the user is prompted to fill out a form with an application name and type. Once the user has completed the form, they are redirected to the application dashboard.
 
 In this guide, you will learn how to:
@@ -14,10 +15,9 @@ In this guide, you will learn how to:
 2. Configure your Middleware to read session data
 3. Update the user’s onboarding state
 
-For the sake of this guide, examples are written for Next.js App Router, but can be used with Next.js Pager Router as well. The examples have been pared down to the bare minimum to enable you to easily customize them to your needs. 
-
 <Callout type="info" emoji="💡">
-  To see this guide in action, check out the [repository](https://github.com/clerk/clerk-nextjs-onboarding-sample-app/tree/main).
+  To see a working example, check out our sample demonstration app
+  [here](https://sample-onboarding-app.clerkpreview.com/).
 </Callout>
 
 ## Add custom claims to your session token
