--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -111,6 +111,8 @@ export const config = {
 };
 ```
 
+### Create a layout for the `/onboarding` route
+
 You will need a layout for the `/onboarding` route that will redirect users to the dashboard if they have already completed onboarding.
 
 1. In your `/app` directory, create an `/onboarding` folder.
