redirect user to homepage instead of dashboard

--- a/docs/guides/add-onboarding-flow.mdx
+++ b/docs/guides/add-onboarding-flow.mdx
@@ -7,7 +7,7 @@ description: Leverage Clerk’s customizable session tokens, public metadata, an
 
 Onboarding is a crucial part of many authentication flows. Sometimes you need to make sure certain criteria is met and collected before allowing access to parts of your application. With Clerk, you can leverage customizable session tokens, public metadata, and Middleware to create a custom onboarding experience.
 
-This guide demonstrates how to create a custom onboarding flow that requires users to complete a form before they can access the application. After a user authenticates using Clerk's [Account portal](/docs/account-portal/overview), the user is prompted to fill out a form with an application name and type. Once the user has completed the form, they are redirected to the application dashboard.
+This guide demonstrates how to create a custom onboarding flow that requires users to complete a form before they can access the application. After a user authenticates using Clerk's [Account portal](/docs/account-portal/overview), the user is prompted to fill out a form with an application name and type. Once the user has completed the form, they are redirected to the application's homepage.
 
 In this guide, you will learn how to:
 
@@ -67,7 +67,7 @@ declare global {
 
 Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware#usage) allows you to configure access to your routes with fine grained control. It also allows you to retrieve claims directly from the session and redirect your user accordingly.
 
-The following example demonstrates how to use Clerk's `authMiddleware()` to redirect users based on their onboarding status. If the user is signed in and has not completed onboarding, they will be redirected to the onboarding page. If the user has completed onboarding, they will be redirected to the dashboard.
+The following example demonstrates how to use Clerk's `authMiddleware()` to redirect users based on their onboarding status. If the user is signed in and has not completed onboarding, they will be redirected to the onboarding page.
 
 Note that the following example protects all routes. This is so that any user visiting your application is forced to authenticate, and then forced to onboard. You can customize the `publicRoutes` array to include any routes that should be accessible to all users, even unauthenticated ones.
 
@@ -114,7 +114,7 @@ export const config = {
 
 ### Create a layout for the `/onboarding` route
 
-You will need a layout for the `/onboarding` route that will redirect users to the dashboard if they have already completed onboarding.
+You will need a layout for the `/onboarding` route that will redirect users to the homepage if they have already completed onboarding.
 
 1. In your `/app` directory, create an `/onboarding` folder.
 2. In your `/onboarding` directory, create a `layout.tsx` file and add the following code to the file. This file could also be expanded to handle multiple steps, if multiple steps are required for an onboarding flow.
@@ -129,7 +129,7 @@ export default function RootLayout({
   children: React.ReactNode;
 }) {
   if (auth().sessionClaims?.metadata.onboardingComplete === true) {
-    redirect("/dashboard");
+    redirect("/");
   }
 
   return <>{children}</>;
@@ -169,7 +169,7 @@ export default function OnboardingComponent() {
     const res = await completeOnboarding(formData);
     if (res?.message) {
       await user?.reload();
-      router.push("/dashboard");
+      router.push("/");
     }
     if (res?.error) {
       setError(res?.error);
