--- a/docs/elements/reference/common.mdx
+++ b/docs/elements/reference/common.mdx
@@ -3,7 +3,7 @@ title: Clerk Elements Common Components
 description: Reference documentation for common Clerk Elements components.
 ---
 
-# Clerk Elements Common Components
+# Clerk Elements common components
 
 Clerk Elements provides a set of common components that are used across all flows. We recommend importing them all under the `Clerk.` namespace to make discovery easier and reduce naming conflicts with other common components throughout your application. The code snippets on this page assume you have imported the components this way.
 
