--- a/docs/elements/reference/sign-in.mdx
+++ b/docs/elements/reference/sign-in.mdx
@@ -3,9 +3,9 @@ title: Clerk Elements Sign-in Components
 description: Reference documentation for Clerk Elements sign-in components.
 ---
 
-# Clerk Elements Sign-in Components
+# Clerk Elements sign-in components
 
-These components are specific to creating sign-in flows. They are imported from `@clerk/nextjs/experimental/elements/sign-in`. We recommend importing them all under the `SignIn.` namespace to make discovery easier and reduce naming conflicts with other components throughout your application. The code snippets on this page assume you have imported the components this way.
+The following components are used when creating sign-in flows. They are imported from `@clerk/nextjs/experimental/elements/sign-in`. We recommend importing them all under the `SignIn.` namespace to make discovery easier and reduce naming conflicts with other components throughout your application. The code snippets on this page assume you have imported the components this way.
 
 ```tsx filename="Anatomy"
 <SignIn.Root>
@@ -195,5 +195,3 @@ The `<Action>` component exposes various flow-related actions. It can be used to
   </SignIn.Strategy>
 </SignIn.Step>
 ```
-import { Sign } from "crypto"
-
