Add initial styling guide

--- a/docs/elements/guides/sign-in.mdx
+++ b/docs/elements/guides/sign-in.mdx
@@ -138,7 +138,7 @@ In the verifications step, you will need to render a `<SignIn.Strategy>` compone
 
 Verification is the final step in the sign-in flow. When a user has verified all required factors, the sign-in attempt will be complete and they will be signed in.
 
-### Add forgot password
+### Support passwords
 
 _TK_
 
