--- a/docs/elements/guides/styling.mdx
+++ b/docs/elements/guides/styling.mdx
@@ -45,7 +45,7 @@ export default function SignInPage() {
 
 If you're already using Tailwind CSS, there is no additional setup required! Classes from Tailwind can be applied to most Clerk Elements components, rely on your editor's intellisense to see if `className` is a valid prop on a component you want to style.
 
-## Compose your own styling with `asChild`
+## Styling with existing components via `asChild`
 
 Many of the Clerk Elements components accept an `asChild` prop that allows you to swap out the rendered element. This is useful if you have an existing design system or component library that you wish to use along with Clerk Elements.
 
