--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -93,7 +93,7 @@ You can create organizations in the Clerk Dashboard or in your application. To c
 
 The number of monthly active organizations (MAOs) you can create depends on your [Clerk plan](/pricing).
 
-With the Free plan, you can create up to 100 MAOs across your entire account. Each MAO can have up to 5 members. So if you have 20 different Clerk applications, each of them can have 5 organizations (100 total across your account).
+With the Free plan, you can have up to 100 MAOs on any given Clerk app. Each MAO can have up to 5 members.
 
 With the Pro plan, you can create up to 100 MAOs across your entire account. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. So if you have 20 applications, each of them can have 5 organizations (100 total across your account), and then each additional organization costs $1.00 per month.
 
