--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -91,7 +91,7 @@ You can create organizations in the Clerk Dashboard or in your application. To c
 3. Select the **Create Organization** button.
 4. Enter the organization's name and slug. The slug is a unique identifier for the organization and is used in URLs. Select the organization's owner from the list of users in your application. The owner is the user who will be the organization's admin.
 
-The number of monthly active organizations (MAOs) you can create depends on your [Clerk plan](/pricing).
+The number of organizations you can create depends on your [Clerk plan](/pricing), and is measured by "monthly active organizations" (MAOs) - this means an organization with more than one user that has signed in that month.
 
 With the Free plan, you can have up to 100 MAOs on any given Clerk app. Each MAO can have up to 5 members.
 
