--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -95,7 +95,9 @@ The number of organizations you can create depends on your [Clerk plan](/pricing
 
 With the Free plan, you can have up to 100 MAOs on any given Clerk app. Each MAO can have up to 5 members.
 
-With the Pro plan, you can create up to 100 MAOs across your entire account. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. So if you have 20 applications, each of them can have 5 organizations (100 total across your account), and then each additional organization costs $1.00 per month.
+For a Clerk app with the Pro plan, you can create up to 100 MAOs free. Each MAO after the first 100 costs $1.00 per month. Each MAO can have an unlimited number of members. As an example, if you have 120 MAOs on your app, it would cost an extra $20/month, on top of the base Pro plan pricing at $25/month, for a total of $45/month.
+
+For more details on pricing, see [our pricing page](https://clerk.com/pricing).
 
 If you need more organizations, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
 
