--- a/docs/organizations/overview.mdx
+++ b/docs/organizations/overview.mdx
@@ -99,7 +99,7 @@ For a Clerk app with the Pro plan, you can create up to 100 MAOs free. Each MAO 
 
 For more details on pricing, see [our pricing page](https://clerk.com/pricing).
 
-If you need more organizations, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
+If you need more organizations or custom pricing, please contact [our sales team](https://clerk.com/contact/sales) to upgrade to the Enterprise plan.
 
 ### Application user
 
